# Paymigo_Frontend_guidewire

./: .gitignore  README.MD  TESTING_CHECKLIST.md  firestore.indexes.json  readmebefore.md  validate_system.py
Features_tobe_implemented/: admin_map_analysis (1).html
Features_tobe_implemented/Future_analysis/: app.py  pay.html
Features_tobe_implemented/Future_analysis/risk_forecaster/risk_forecaster/: lstm_model.h5  predict.py  scaler.pkl  train.py
Paymigo_Frontend/: README.md  how_the_backend_must_be.md  package-lock.json
Paymigo_Frontend/web/: .env.example  .gitignore  README.md  firebase-blueprint.json  firestore.rules  index.html  metadata.json  package-lock.json  package.json
Paymigo_Frontend/web/api/: server.ts
Paymigo_Frontend/web/i18n/: en.json  hi.json  ta.json
Paymigo_Frontend/web/lib/: loyalty-pool.ts  ml-client.ts  payout-calculator.ts  utils.ts
Paymigo_Frontend/web/scripts/: generatePdfs.js
Paymigo_Frontend/web/src/: App.tsx  firebase.ts  index.css  vite-env.d.ts
Paymigo_Frontend/web/src/components/: Navbar.tsx  ThreeBackground.tsx
backend/: .env.example  .gitignore  package-lock.json  package.json  reseedAdmin.js  server.js
backend/lib/: csvLoader.js  firebaseAdmin.js
backend/middleware/: authMiddleware.js
backend/prisma/: schema.prisma
backend/routes/: ai.js  analytics.js  auth.js  claims.js  dashboard.js  forecast-ops.js  fraud-mock.js  fraud.js  geotruth.js  nlp.js  orchestrator.js  payment.js  payouts.js  premium.js  pricing.js  triggers.js  wallet.js  weather.js  worker.js
ml-services/: fix_scaler.py  test_forecast.py
ml-services/ML-Service/: README.md  create_dummy_models.py  fix_fraud_detector.py  kmeans_model.pkl  requirements.txt  scaler.pkl  test_flow.py
ml-services/ML-Service/Fraud_detection_and_geospoofing/: 01_data_hybrid_collection.py  02_preprocessing_pipeline.py  03_gps_spoofing_model.py  04_fraud_detection_model.py  05_evaluate_test.py  config.py  requirements.txt  run_pipeline.py
ml-services/ML-Service/Geotruth_Engine/: .gitignore  README.md  pyproject.toml  requirements.txt
ml-services/ML-Service/Geotruth_Engine/examples/: test_end_to_end.py  test_inertial.py
ml-services/ML-Service/Geotruth_Engine/tests/: test_engine.py
ml-services/ML-Service/app/: main.py
ml-services/ML-Service/curfew_nlp/: collect_data.py  config.py  evaluate_test.py  preprocess.py  requirements.txt  train_model.py  utils.py
ml-services/ML-Service/geotruth/: __init__.py  engine.py  main.py  schemas.py  server.py
ml-services/ML-Service/paymigo_assistant/: requirements.txt
(+146 files in other folders)
