[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geotruth"
version = "1.0.0"
description = "Multi-Modal Environmental Coherence Verification for Parametric Insurance"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["fraud-detection", "parametric-insurance", "gig-economy", "machine-learning", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]

# ── Core runtime dependencies ──────────────────────────────────────────────────
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "xgboost>=2.0.3",
    "scikit-learn>=1.4.2",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "joblib>=1.4.2",
]

# ── Optional extras ────────────────────────────────────────────────────────────
[project.scripts]
geotruth = "geotruth.main:cli"

[project.optional-dependencies]
acoustic = [
    # Lightweight TFLite runtime for on-device YAMNet inference.
    # Use 'tensorflow' instead if tflite-runtime fails on your platform.
    "tflite-runtime>=2.14.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "httpx>=0.27.0",   # required by FastAPI TestClient
]

# ── Package discovery ──────────────────────────────────────────────────────────
[tool.setuptools.packages.find]
where = ["."]
include = ["geotruth*"]

# ── Package data — include trained model files ─────────────────────────────────
[tool.setuptools.package-data]
geotruth = ["models/*.json"]

# ── Project URLs ───────────────────────────────────────────────────────────────
[project.urls]
Homepage = "https://github.com/your-org/geotruth"
Repository = "https://github.com/your-org/geotruth"
"Bug Tracker" = "https://github.com/your-org/geotruth/issues"

# ── pytest configuration ───────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "WARNING"
